# openec-et

./: .gitignore  ClayTest  CodeTest  ECDAGTest  ETHHNonXORTest  ETHHXORTest  HHNonXORTest  HHXORPlusTest  HHXORTest  README.md  et-impl.md  hh_ecdag_check.py  local_test_rb.sh
conf/: sysSetting.xml
hdfs3-integration/conf/: core-site.xml  hadoop-env.sh  hdfs-site.xml  workers
hdfs3-integration/src/: BlockManager.java  BlockPlacementPolicy.java  BlockPlacementPolicyDefault.java  BlockPlacementPolicyOEC.java  CommandWithDestination.java  FSDirWriteFileOp.java  FSNamesystem.java  LowRedundancyBlocks.java  NameNodeRpcServer.java  NetworkTopology.java  hdfs.c
hdfs3.3.4-integration/: install-openssl.sh  install.sh
hdfs3.3.4-integration/conf/: core-site.xml  hadoop-env.sh  workers
hdfs3.3.4-integration/hadoop-yarn-applications-catalog/: pom.xml
hdfs3.3.4-integration/src/: StripedBlockReconstructor.java
hdfs3.3.4-integration/test_hdfs/: create_hdfs_ec_policy.py  create_hdfs_site.py  rack_aware.sh  test_hdfs_online.py  test_hdfs_online.sh  test_hdfs_recovery.sh  update_hdfs_configs.sh
hdfsraid-integration/oec/protocol/: AGCommand.java
hdfsraid-integration/src/: BlockPlacementPolicyOEC.java  DFSInputStream.java  FSNamesystem.java  NameNode.java  NativeJerasure.c  NativeJerasure.h  NetworkTopology.java  PlacementMonitor.java  RaidNode.java
openec-et-patch/conf/: sysSetting.xml
openec-et-patch/hdfs3-integration/: install.sh
openec-et-patch/hdfs3-integration/conf/: core-site.xml  hadoop-env.sh  hdfs-site.xml  workers
openec-et-patch/src/: CMakeLists.txt
openec-et-patch/src/common/: Coordinator.cc  Coordinator.hh  StripeStore.hh
openec-et-patch/src/ec/: AzureLRC.hh  ECBase.cc  ECNode.cc  ECPolicy.hh  ETHHXORPlus.cc  ETHTEC.cc  ETRSConv.hh  ETUnit.cc
qfs-integration/conf/: ChunkServer.conf  MetaServer.conf
qfs-integration/src/: LayoutManager.cc  MetaRequest.cc  Reader.cc
script/: drop_cache.sh  estimate_seek_time.sh  restart.sh  start.py  start.sh  stop.sh  test-code.sh  updateIP.sh
scripts_exp/: check_bw.sh  check_cluster_logs.sh  check_cluster_status.sh  check_configs.sh  check_nodes_alive.sh  check_redis.sh  clear_hdfs.sh  eval_code.py  offline_write.sh  restart_hdfs.sh  restart_oec.sh  test_oec_online.py  test_oec_online.sh  update_configs.sh  update_ip.sh
src/: AzureLRCTest.cc  BUTTERFLYTest.cc  CMakeLists.txt  ClayTest.cc  ETAzureLRCTest.cc  ETHHNonXORTest.cc  ETHHXORPlusTest.cc  ETHHXORTest.cc  ETRSConvTest.cc  HDFSClientMTTest.cc  HDFSClientSeekTest.cc  HHNonXORTest.cc  HHXORPlusTest.cc  HHXORTest.cc  HTECTest.cc  OECClient.cc  RDPRDORTest.cc  RSConvTest.cc  RSMultiInsTest.cc  estimate_seek_time.sh
src/common/: Coordinator.cc  Coordinator.hh  FSObjInputStream.cc  FSObjInputStream.hh  OECInputStream.cc  OECOutputStream.cc  OECWorker.cc  OECWorker.hh  StripeStore.cc
src/ec/: AzureLRC.cc  AzureLRC.hh  BUTTERFLY.cc  BUTTERFLY.hh  Clay.cc  Clay.hh  ECBase.hh  ECDAG.cc  ECNode.cc  ECPolicy.cc  ECPolicy.hh  ETAzureLRC.cc  ETAzureLRC.hh  ETHHNonXOR.cc  ETHHNonXOR.hh  ETHHXOR.cc  ETHHXOR.hh  ETHHXORPlus.cc  ETHHXORPlus.hh  ETHTEC.cc  ETHTEC.hh  ETRSConv.cc  ETRSConv.hh  ETUnit.cc  ETUnit.hh  ETUnitSquare.cc  ETUnitSquare.hh  HHNonXOR.cc  HHNonXOR.hh  HHXOR.cc  HHXOR.hh  HHXORPlus.cc  HHXORPlus.hh  HTEC.cc  HTEC.hh  Hitchhiker.hh  OfflineECPool.cc  RDPRDOR.cc  RDPRDOR.hh  RSConv.cc  (+3 more)
src/fs/: Hadoop3.cc
src/protocol/: AGCommand.cc  AGCommand.hh
